# spiky

./: .gitignore  ISSUE.md  README.md  bruh.py  nmnist_snntorch.py  pyproject.toml  testing.py  testy.py
src/spiky/: network.py
tests/: test_against_snntorch.py  test_against_snntorch_backprop.py  test_against_snntorch_foreprop.py  test_analyze.py  test_forward.py  test_visualization.py
